--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 </div>
 <div class="car">
     <div class="wheel1">
-        <img src=".//assets/car_wheel_left.png" alt="">
+        <img src="./assets/car_wheel_left.png" alt="">
     </div>
     <div class="wheel2">
-        <img src=".//assets/car_wheel_right.png" alt="">
+        <img src="./assets/car_wheel_right.png" alt="">
     </div>
 </div>
         </div>
